Dev/CS/Mascaret/Mascaret/obj/Debug/OCLExpressionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Utilisateur\Developpement\MascaretGit\MascaretGit\Dev\CS\Mascaret\Mascaret\VEHA\Kernel\OCLExpression.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Mascaret {

using System;
using System.Collections;
using System.Collections.Generic;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class OCLExpressionParser : Parser {
	public const int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, LPAREN=6, RPAREN=7, COLON=8, EQUAL=9, 
		NEQUAL=10, LT=11, GT=12, LE=13, GE=14, RARROW=15, DOTDOT=16, DOT=17, POUND=18, 
		SEMICOL=19, PLUS=20, MINUS=21, MULT=22, DIVIDE=23, DIGIT=24, STRING=25, 
		WS=26;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'xor'", "'or'", "'implies'", "'and'", "'not'", "'('", "')'", 
		"':'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'->'", "'..'", "'.'", 
		"'#'", "';'", "'+'", "'-'", "'*'", "'/'", "DIGIT", "STRING", "WS"
	};
	public const int
		RULE_expression = 0, RULE_logicalexpression = 1, RULE_relationexpression = 2, 
		RULE_additiveexpression = 3, RULE_multiplicativeexpression = 4, RULE_unaryexpression = 5, 
		RULE_postfixexpression = 6, RULE_primaryexpression = 7, RULE_propertycall = 8, 
		RULE_attributecall = 9, RULE_logicaloperator = 10, RULE_relationaloperator = 11, 
		RULE_addoperator = 12, RULE_multiplyoperator = 13, RULE_unaryoperator = 14, 
		RULE_numericalconstant = 15, RULE_integer = 16, RULE_float = 17;
	public static readonly string[] ruleNames = {
		"expression", "logicalexpression", "relationexpression", "additiveexpression", 
		"multiplicativeexpression", "unaryexpression", "postfixexpression", "primaryexpression", 
		"propertycall", "attributecall", "logicaloperator", "relationaloperator", 
		"addoperator", "multiplyoperator", "unaryoperator", "numericalconstant", 
		"integer", "float"
	};

	public override string GrammarFileName { get { return "OCLExpression.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		public Dictionary<string, ValueSpecification> context;
		private ValueSpecification lvalue;
		public ValueSpecification value;


	public OCLExpressionParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ExpressionContext : ParserRuleContext {
		public LogicalexpressionContext logicalexpression() {
			return GetRuleContext<LogicalexpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; logicalexpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicalexpressionContext : ParserRuleContext {
		public LogicaloperatorContext[] logicaloperator() {
			return GetRuleContexts<LogicaloperatorContext>();
		}
		public LogicaloperatorContext logicaloperator(int i) {
			return GetRuleContext<LogicaloperatorContext>(i);
		}
		public RelationexpressionContext[] relationexpression() {
			return GetRuleContexts<RelationexpressionContext>();
		}
		public RelationexpressionContext relationexpression(int i) {
			return GetRuleContext<RelationexpressionContext>(i);
		}
		public LogicalexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicalexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterLogicalexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitLogicalexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicalexpressionContext logicalexpression() {
		LogicalexpressionContext _localctx = new LogicalexpressionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_logicalexpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38; relationexpression();
			State = 44;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1))) != 0)) {
				{
				{
				State = 39; logicaloperator();
				State = 40; relationexpression();
				}
				}
				State = 46;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelationexpressionContext : ParserRuleContext {
		public AdditiveexpressionContext[] additiveexpression() {
			return GetRuleContexts<AdditiveexpressionContext>();
		}
		public AdditiveexpressionContext additiveexpression(int i) {
			return GetRuleContext<AdditiveexpressionContext>(i);
		}
		public RelationexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relationexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterRelationexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitRelationexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelationexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelationexpressionContext relationexpression() {
		RelationexpressionContext _localctx = new RelationexpressionContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_relationexpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; additiveexpression();
			lvalue = value;
			State = 75;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << NEQUAL) | (1L << LT) | (1L << GT) | (1L << LE) | (1L << GE))) != 0)) {
				{
				State = 73;
				switch (_input.La(1)) {
				case EQUAL:
					{
					{
					State = 49; Match(EQUAL);
					State = 50; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; if (l == r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				case NEQUAL:
					{
					{
					State = 53; Match(NEQUAL);
					State = 54; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; if (l != r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				case LT:
					{
					{
					State = 57; Match(LT);
					State = 58; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; if (l < r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				case GT:
					{
					{
					State = 61; Match(GT);
					State = 62; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; MascaretApplication.Instance.VRComponentFactory.Log(""+l +">" +r); if (l > r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				case GE:
					{
					{
					State = 65; Match(GE);
					State = 66; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; if (l >= r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				case LE:
					{
					{
					State = 69; Match(LE);
					State = 70; additiveexpression();
					double l = ((LiteralReal)lvalue).RValue; double r = ((LiteralReal)value).RValue; if (l <= r) value = new LiteralBoolean(true); else value = new LiteralBoolean(false);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 77;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdditiveexpressionContext : ParserRuleContext {
		public AddoperatorContext[] addoperator() {
			return GetRuleContexts<AddoperatorContext>();
		}
		public MultiplicativeexpressionContext multiplicativeexpression(int i) {
			return GetRuleContext<MultiplicativeexpressionContext>(i);
		}
		public AddoperatorContext addoperator(int i) {
			return GetRuleContext<AddoperatorContext>(i);
		}
		public MultiplicativeexpressionContext[] multiplicativeexpression() {
			return GetRuleContexts<MultiplicativeexpressionContext>();
		}
		public AdditiveexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_additiveexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterAdditiveexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitAdditiveexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdditiveexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AdditiveexpressionContext additiveexpression() {
		AdditiveexpressionContext _localctx = new AdditiveexpressionContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_additiveexpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; multiplicativeexpression();
			State = 84;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				State = 79; addoperator();
				State = 80; multiplicativeexpression();
				}
				}
				State = 86;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MultiplicativeexpressionContext : ParserRuleContext {
		public UnaryexpressionContext unaryexpression(int i) {
			return GetRuleContext<UnaryexpressionContext>(i);
		}
		public UnaryexpressionContext[] unaryexpression() {
			return GetRuleContexts<UnaryexpressionContext>();
		}
		public MultiplyoperatorContext multiplyoperator(int i) {
			return GetRuleContext<MultiplyoperatorContext>(i);
		}
		public MultiplyoperatorContext[] multiplyoperator() {
			return GetRuleContexts<MultiplyoperatorContext>();
		}
		public MultiplicativeexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multiplicativeexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterMultiplicativeexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitMultiplicativeexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplicativeexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultiplicativeexpressionContext multiplicativeexpression() {
		MultiplicativeexpressionContext _localctx = new MultiplicativeexpressionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_multiplicativeexpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; unaryexpression();
			State = 93;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==MULT || _la==DIVIDE) {
				{
				{
				State = 88; multiplyoperator();
				State = 89; unaryexpression();
				}
				}
				State = 95;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryexpressionContext : ParserRuleContext {
		public PostfixexpressionContext postfixexpression() {
			return GetRuleContext<PostfixexpressionContext>(0);
		}
		public UnaryoperatorContext unaryoperator() {
			return GetRuleContext<UnaryoperatorContext>(0);
		}
		public UnaryexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterUnaryexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitUnaryexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryexpressionContext unaryexpression() {
		UnaryexpressionContext _localctx = new UnaryexpressionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_unaryexpression);
		try {
			State = 100;
			switch (_input.La(1)) {
			case T__0:
			case MINUS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96; unaryoperator();
				State = 97; postfixexpression();
				}
				break;
			case DIGIT:
			case STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 99; postfixexpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PostfixexpressionContext : ParserRuleContext {
		public PropertycallContext _propertycall;
		public ITerminalNode[] DOT() { return GetTokens(OCLExpressionParser.DOT); }
		public PrimaryexpressionContext primaryexpression() {
			return GetRuleContext<PrimaryexpressionContext>(0);
		}
		public PropertycallContext propertycall(int i) {
			return GetRuleContext<PropertycallContext>(i);
		}
		public PropertycallContext[] propertycall() {
			return GetRuleContexts<PropertycallContext>();
		}
		public ITerminalNode DOT(int i) {
			return GetToken(OCLExpressionParser.DOT, i);
		}
		public PostfixexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_postfixexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterPostfixexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitPostfixexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPostfixexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PostfixexpressionContext postfixexpression() {
		PostfixexpressionContext _localctx = new PostfixexpressionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_postfixexpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; primaryexpression();
			State = 109;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==DOT) {
				{
				{
				State = 103; Match(DOT);
				State = 104; _localctx._propertycall = propertycall();
				MascaretApplication.Instance.VRComponentFactory.Log("Prop " + (_localctx._propertycall!=null?_input.GetText(_localctx._propertycall.start,_localctx._propertycall.stop):null));value = (((InstanceValue)value).SpecValue).Slots[(_localctx._propertycall!=null?_input.GetText(_localctx._propertycall.start,_localctx._propertycall.stop):null)].getValue(); 
				}
				}
				State = 111;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryexpressionContext : ParserRuleContext {
		public IToken _STRING;
		public NumericalconstantContext _numericalconstant;
		public NumericalconstantContext numericalconstant() {
			return GetRuleContext<NumericalconstantContext>(0);
		}
		public ITerminalNode STRING() { return GetToken(OCLExpressionParser.STRING, 0); }
		public PrimaryexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterPrimaryexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitPrimaryexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimaryexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryexpressionContext primaryexpression() {
		PrimaryexpressionContext _localctx = new PrimaryexpressionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_primaryexpression);
		try {
			State = 117;
			switch (_input.La(1)) {
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; _localctx._STRING = Match(STRING);
				 MascaretApplication.Instance.VRComponentFactory.Log("PRIME" + (_localctx._STRING!=null?_localctx._STRING.Text:null)); value = context[(_localctx._STRING!=null?_localctx._STRING.Text:null)];
				}
				break;
			case DIGIT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114; _localctx._numericalconstant = numericalconstant();
				value = new LiteralReal((_localctx._numericalconstant!=null?_input.GetText(_localctx._numericalconstant.start,_localctx._numericalconstant.stop):null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertycallContext : ParserRuleContext {
		public AttributecallContext attributecall() {
			return GetRuleContext<AttributecallContext>(0);
		}
		public PropertycallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertycall; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterPropertycall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitPropertycall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertycall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertycallContext propertycall() {
		PropertycallContext _localctx = new PropertycallContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_propertycall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; attributecall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttributecallContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(OCLExpressionParser.STRING, 0); }
		public AttributecallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attributecall; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterAttributecall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitAttributecall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttributecall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttributecallContext attributecall() {
		AttributecallContext _localctx = new AttributecallContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_attributecall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121; Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicaloperatorContext : ParserRuleContext {
		public LogicaloperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicaloperator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterLogicaloperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitLogicaloperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicaloperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicaloperatorContext logicaloperator() {
		LogicaloperatorContext _localctx = new LogicaloperatorContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_logicaloperator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1))) != 0)) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelationaloperatorContext : ParserRuleContext {
		public ITerminalNode EQUAL() { return GetToken(OCLExpressionParser.EQUAL, 0); }
		public ITerminalNode GE() { return GetToken(OCLExpressionParser.GE, 0); }
		public ITerminalNode NEQUAL() { return GetToken(OCLExpressionParser.NEQUAL, 0); }
		public ITerminalNode LT() { return GetToken(OCLExpressionParser.LT, 0); }
		public ITerminalNode GT() { return GetToken(OCLExpressionParser.GT, 0); }
		public ITerminalNode LE() { return GetToken(OCLExpressionParser.LE, 0); }
		public RelationaloperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relationaloperator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.EnterRelationaloperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IOCLExpressionListener typedListener = listener as IOCLExpressionListener;
			if (typedListener != null) typedListener.ExitRelationaloperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLExpressionVisitor<TResult> typedVisitor = visitor as IOCLExpressionVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelationaloperator(this);
			else return visitor.VisitChildren(this);
		}
	}
